--- a/pump/omnipod-common/src/main/res/values/strings.xml
+++ b/pump/omnipod-common/src/main/res/values/strings.xml
@@ -149,6 +149,7 @@
     <string name="omnipod_common_preferences_notification_uncertain_bolus_sound_enabled">Som para notificações de bolus incerto ativado</string>
     <!-- Omnipod - Pod Status -->
     <string name="omnipod_common_pod_status_no_active_pod">Nenhum Pod Ativo</string>
+    <string name="omnipod_common_pod_status_normal">Normal</string>
     <string name="omnipod_common_pod_status_waiting_for_activation">Configuração em andamento (aguardando ativação do Pod)</string>
     <string name="omnipod_common_pod_status_waiting_for_cannula_insertion">Configuração em andamento (aguardando inserção da cânula)</string>
     <string name="omnipod_common_pod_status_running">Funcionando</string>
